# flake8-declarative-dict

./: .gitignore  LICENSE  README.MD  pyproject.toml
flake8_declarative_dict/: __init__.py  _checker.py  _plugin.py  config.py  error.py  visitor.py
tests/: conftest.py  test_DCD001.py  test_DCD002.py  test_DCD003.py  test_negatives.py
